--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node_modules/.bin/nodemon -e js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/*.spec.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +15,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "json2csv": "^5.0.6",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.9"
   }
